# fetchy

./: .gitignore  LICENSE  README.md  README.rst  azure-pipelines.yml  pyproject.toml
fetchy/: __init__.py  blueprint.py  cli.py  config.py  context.py  dependency.py  dfs.py  dockerfile.py  dockerizer.py  downloader.py  extractor.py  fetchy.py  package.py  parser.py  repository.py  source.py  utils.py  version.py
fetchy/cli/: __init__.py  application.py
fetchy/cli/commands/: blueprint.py  command.py  dockerize.py  download.py  extract.py
fetchy/plugins/: __init__.py  plugin.py
fetchy/plugins/paths/: __init__.py  paths.py
tests/: test_dependency.py  test_fetchy.py  test_version.py
tests/smoke/: test_fetchy.py
