[tool.poetry]
name = "fetchy"
version = "0.1.0"
description = ""
authors = ["thomas <thomas.kluiters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.32"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "*", allows-prereleases = true }
flake8 = "3.7.8"

[tool.poetry.scripts]
fetchy = 'fetchy:cli'
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

